bin_PROGRAMS = ia
ia_SOURCES =				\
	analyze.c				\
	analyze.h				\
	common.c				\
	common.h				\
	ffmpeg.c				\
	ffmpeg.h				\
	iaio.c					\
	iaio.h					\
	ia_sequence.c			\
	ia_sequence.h			\
	image_analyzer.c		\
	image_analyzer.h		\
	queue.c					\
	queue.h					\
	filters/blur.c			\
	filters/blur.h			\
	filters/copy.c			\
	filters/copy.h			\
	filters/curvature.c		\
	filters/curvature.h		\
	filters/diff.c			\
	filters/diff.h			\
	filters/draw_best_box.c	\
	filters/draw_best_box.h	\
	filters/edges.c			\
	filters/edges.h			\
	filters/filters.c		\
	filters/filters.h		\
	filters/flow.c			\
	filters/flow.h			\
	filters/grayscale.c		\
	filters/grayscale.h		\
	filters/monkey.c		\
	filters/monkey.h		\
	filters/normal.c		\
	filters/normal.h		\
	filters/sad.c			\
	filters/sad.h			\
	filters/ssd.c			\
	filters/ssd.h
